--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>space.exploration</groupId>
-    <artifactId>spice.utilities</artifactId>
-    <version>1.2.2</version>
+    <artifactId>spice.utilities.mac.distro</artifactId>
+    <version>1.2.3</version>
 
     <properties>
         <junit.output.dir>output</junit.output.dir>
@@ -101,7 +101,7 @@
         <dependency>
             <groupId>space.exploration</groupId>
             <artifactId>communications.protocol</artifactId>
-            <version>1.1.4</version>
+            <version>1.2</version>
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/joda-time/joda-time -->
